Add favicon to site
Added favicon.png to the public images directory and linked it in index.html to improve site branding and appearance in browser tabs.

--- a/scentora-ecommerce/index.html
+++ b/scentora-ecommerce/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scentora Perfumes</title>
     <script src="https://kit.fontawesome.com/ddc04c24fc.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
